objects/References__c.object
<CustomObject><fields>
        <fullName>Company__c</fullName>
        <description>Name of the company the reference works for</description>
        <label>Company</label>
        <length>30</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Email__c</fullName>
        <description>Email address of the reference contact</description>
        <label>Email</label>
        <required>true</required>
        <type>Email</type>
    </fields><fields>
        <fullName>Name__c</fullName>
        <description>The name of the reference</description>
        <label>Name</label>
        <length>45</length>
        <required>true</required>
        <type>Text</type>
    </fields><fields>
        <fullName>Phone__c</fullName>
        <description>Phone number of the reference contact (optional)</description>
        <label>Phone</label>
        <type>Phone</type>
    </fields><fields>
        <fullName>Related_Agreement__c</fullName>
        <description>Agreement the reference is related to</description>
        <inlineHelpText>Agreement the reference is related to</inlineHelpText>
        <label>Related Agreement</label>
        <referenceTo>Partner_Agreement__c</referenceTo>
        <relationshipLabel>References</relationshipLabel>
        <relationshipName>References</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields><allowInChatterGroups>false</allowInChatterGroups><compactLayoutAssignment>SYSTEM</compactLayoutAssignment><deploymentStatus>Deployed</deploymentStatus><description>Used to capture references</description><enableActivities>true</enableActivities><enableBulkApi>true</enableBulkApi><enableChangeDataCapture>false</enableChangeDataCapture><enableFeeds>false</enableFeeds><enableHistory>false</enableHistory><enableReports>true</enableReports><enableSearch>true</enableSearch><enableSharing>true</enableSharing><enableStreamingApi>true</enableStreamingApi><externalSharingModel>ControlledByParent</externalSharingModel><label>Reference</label><nameField>
        <displayFormat>Ref-{000000}</displayFormat>
        <label>Reference Number</label>
        <type>AutoNumber</type>
    </nameField><pluralLabel>References</pluralLabel><sharingModel>ControlledByParent</sharingModel><visibility>Public</visibility></CustomObject>